--- a/appoint/appointnent-app/src/index.css
+++ b/appoint/appointnent-app/src/index.css
@@ -1,6 +1,11 @@
+html,
 body {
+    height: 100%;
     padding: 0;
     margin: 0;
+}
+
+body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
@@ -11,4 +16,11 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
+}
+
+#root {
+    display: flex;
+    height: 100%;
+    margin: 0;
+    flex-wrap: wrap-reverse;
 }
